	  include/nuttx/binfmt/.
	* arch/sim/src/up_elf.c and arch/x86/src/common/up_elf.c:  Add
	  for ELF modules.
	* arch/arm/include/elf.h:  Added ARM ELF header file.
	* include/elf32.h:  Renamed elf.h to elf32.h.
	* configs/stm32f4discovery/ostest:  Converted to use the new
	  Kconfig-based configuration system.
	* configs/stm32f4discovery/elf and configs/stm32f4discovery/scripts/gnu-elf.ld
	  Add a configuration for testing the ARM ELF loader.
	* binfmt/libelf:  Can't use fstat(). NuttX does not yet support it.  Damn!
	* binfmt/libelf:  The basic ELF module execution appears fully functional.
	* configs/shenzhou/src/up_relays.c:  Add support for relays from the
	  Shenzhou board.  Contributed by Darcy Gong.
	* lib/fixedmath: Moved the old lib/math to lib/fixedmath to make room for
	  the math library from the Rhombus OS
	* lib/math: Now contains the math library from the Rhombus OS by Nick Johnson
	  (submitted by Darcy Gong).
	* include/float.h:  Add a first cut at the float.h header file.  This
	  really should be an architecture/toolchain-specific header file.  It
	  is only used if CONFIG_ARCH_FLOAT_H is defined.
	* lib/math: Files now conform to coding standards.  Separated float,
	  double, and long double versions of code into separate files so that
	  they don't draw in so much un-necessary code when doing a dumb link.
	* binfmt/libelf:  The ELF loader is working correctly with C++ static
	  constructors and destructors and all.
	* Documentation/NuttXBinfmt.html:  Add documentionof the binary loader.
	* configs/sim/ostest:  Converted to use the mconfig configuration tool.
	* configs/sim/cxxtest:  New test that will be used to verify the uClibc++
	  port (eventually).
	* include/nuttx/fs/fs.h, lib/stdio/lib_libfread.c, lib_ferror.c,
	  lib_feof.c, and lib_clearerr.c:  Add support for ferror(), feof(),
	  and clearerror().  ferror() support is bogus at the moment (it
	  is equivalent to !feof()); the others should be good.